Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.

pkgcore trunk:

* Add support for FEATURES=test-fail-continue. This allows the remaining
  phases after src_test to continue executing if the test phase fails.

* Deprecated pkgcore.chksum compatibility shim removed.

* Fix installing symlinks via doins for >= EAPI-4.

* Throw warnings for EAPI support in development instead of erroring out.

* Move to using portage's keepdir file naming scheme (.keep_CAT_PN-SLOT)
  while still supporting pkgs using the previous ".keep" method.

* Support the portage-2 profile format.

* Define SLOT and USE for pkg_pretend (mirroring portage) so checking for
  enabled use flags during pkg_pretend works as expected.

* Apply use flags from make.defaults before package.use in profiles.

* Run pkg_nofetch phase when any files in SRC_URI fail to be fetched.

* Update pmerge's portage-like output to more closely approximate current
  portage releases.

* Add pmerge options -O and -n to match --nodeps and --noreplace similar
  to portage.

* Add package.accept_keywords and proper profile package.keywords support
  and force the profile base to be loaded by default so related settings
  in the profile root dir are respected.

* Define ${T} for pkg_pretend phase, allows things like check-reqs for disk
  tempspace to work properly.

* Support for multiple slots in a single atom dependency was removed;
  never made it into a mainline EAPI and isn't useful these days.

* Packages with unsupported EAPIs are now automasked.  Longer term,
  proper exposing of the masking reason will be implemented- in the interim,
  this matches pkgcores normal behaviour.

* Pkgcore now parses EAPI from the ebuild itself, rather than from the
  metadata calculated value.

* .eapi attribute on packages is now mostly unsupported; should instead use
  .eapi_obj instead (an alias will be left in place for that long term).
